Add more chapters

--- a/01_TheBasics.ipynb
+++ b/01_TheBasics.ipynb
@@ -5,7 +5,7 @@
    "id": "b5fc61b8-26f9-46e1-8176-19e2b81f71dd",
    "metadata": {},
    "source": [
-    "Welcome to the Python Basics that everyone should know"
+    "# Welcome to the Python Basics that everyone should know"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "26a10da2-11a0-490c-a23c-dc5500413724",
    "metadata": {},
    "source": [
-    "Step 1) Know your python version"
+    "### Step 1) Know your python version"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "id": "869c33ff-e903-4f86-ac9e-c268c042cc4b",
    "metadata": {},
    "source": [
-    "Step 2) Think like a snake"
+    "### Step 2) Think like a snake"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "id": "f522c49d-18f5-4c80-9186-b90aa4351ede",
    "metadata": {},
    "source": [
-    "Step 3) \"Readability counts\" (See Step 2)"
+    "### Step 3) \"Readability counts\" (See Step 2)"
    ]
   },
   {
@@ -148,6 +148,51 @@
     "Because we are going to do complicated things, and the better we can understand from simply reading the code the better.\n",
     "A lot of people will say \"Python is easy\", but I'd like to challenge those on that to adopt a new mind set, which is \"Python is expressive\". What you do with it can be easy, but can also be complex and challenging."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09e7e921-64a4-4917-aacb-af80bac87ef8",
+   "metadata": {},
+   "source": [
+    "### Step 4) \"We are all consenting adults here\"\n",
+    "\n",
+    "There are a lot of things, as we'll see, that Python allows us to do that break many saftey nets found in other languages. Python has chosen that in somecases preventing us from doing what we want isn't their choice to make. It's our choice to extend, modify, and create code, and that also becomes our responsiblity when we choose to do so.\n",
+    "\n",
+    "(Item 42 in the book really drives this one home: _Item 42: Prefer public attributes over private ones_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "109223dd-b132-42c3-b021-0c619acd8836",
+   "metadata": {},
+   "source": [
+    "### Additional Basics mentioned in the Book\n",
+    "\n",
+    "There are a lot of, what I consider, basic things most Python developers should be aware of mentioned in the book. I list them below but will not cover them with examples. If anyone is unfamiliar with them they should look into each as they are foundational to effective Python code.\n",
+    "\n",
+    "In no particular order:\n",
+    "- functools.wraps\n",
+    "- function scope and closures\n",
+    "- defaultdict\n",
+    "- f-strings\n",
+    "- pep8\n",
+    "- itertools.[chain,repeat,islice,cycle,etc....]\n",
+    "- @classmethod\n",
+    "- super() and MRO\n",
+    "- bisect\n",
+    "- heapq\n",
+    "- deque\n",
+    "- Mock/MagicMock + spec/autospec\n",
+    "- circular dependencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f26a5be-951e-4deb-b381-5bcbaf683374",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
