--- a/05_ThePractical.ipynb
+++ b/05_ThePractical.ipynb
@@ -472,7 +472,9 @@
    "id": "840ef839-587e-490f-8b58-d1183e404061",
    "metadata": {},
    "source": [
-    "Inherit from collections.abc for custom containers"
+    "### Inherit from collections.abc for custom containers\n",
+    "\n",
+    "https://docs.python.org/3/library/collections.abc.html#collections-abstract-base-classes"
    ]
   },
   {
